--- a/test-output/index.html
+++ b/test-output/index.html
@@ -39,8 +39,8 @@
       <div class="suite">
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
-            <a href="#" panel-name="suite-Suite" class="navigator-link">
-              <span class="suite-name border-passed">Suite</span>
+            <a href="#" panel-name="suite-Default_suite" class="navigator-link">
+              <span class="suite-name border-passed">Default suite</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -50,37 +50,37 @@
             <div class="suite-section-content">
               <ul>
                 <li>
-                  <a href="#" panel-name="test-xml-Suite" class="navigator-link ">
-                    <span>C:\Users\erong\git\ProductCentralProject-Automation1\testng.xml</span>
+                  <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
+                    <span>C:\Users\erong\AppData\Local\Temp\testng-eclipse-460825884\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="testlist-Suite" class="navigator-link ">
+                  <a href="#" panel-name="testlist-Default_suite" class="navigator-link ">
                     <span class="test-stats">1 test</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="group-Suite" class="navigator-link ">
+                  <a href="#" panel-name="group-Default_suite" class="navigator-link ">
                     <span>0 groups</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="times-Suite" class="navigator-link ">
+                  <a href="#" panel-name="times-Default_suite" class="navigator-link ">
                     <span>Times</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="reporter-Suite" class="navigator-link ">
+                  <a href="#" panel-name="reporter-Default_suite" class="navigator-link ">
                     <span>Reporter output</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="ignored-methods-Suite" class="navigator-link ">
+                  <a href="#" panel-name="ignored-methods-Default_suite" class="navigator-link ">
                     <span>Ignored methods</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="chronological-Suite" class="navigator-link ">
+                  <a href="#" panel-name="chronological-Default_suite" class="navigator-link ">
                     <span>Chronological view</span>
                   </a> <!-- navigator-link  -->
                 </li>
@@ -98,16 +98,16 @@
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
                     <span class="show-or-hide-methods passed">
-                      <a href="#" panel-name="suite-Suite" class="hide-methods passed suite-Suite"> (hide)</a> <!-- hide-methods passed suite-Suite -->
-                      <a href="#" panel-name="suite-Suite" class="show-methods passed suite-Suite"> (show)</a> <!-- show-methods passed suite-Suite -->
+                      <a href="#" panel-name="suite-Default_suite" class="hide-methods passed suite-Default_suite"> (hide)</a> <!-- hide-methods passed suite-Default_suite -->
+                      <a href="#" panel-name="suite-Default_suite" class="show-methods passed suite-Default_suite"> (show)</a> <!-- show-methods passed suite-Default_suite -->
                     </span>
-                    <div class="method-list-content passed suite-Suite">
+                    <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="com.pwc.productcentral.SanityTestCases" class="method navigator-link" hash-for-method="WEB_71">WEB_71</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.pwc.productcentral.SanityTestCases" class="method navigator-link" hash-for-method="WEB_50">WEB_50</a> <!-- method navigator-link -->
                       </span>
                       <br/>
-                    </div> <!-- method-list-content passed suite-Suite -->
+                    </div> <!-- method-list-content passed suite-Default_suite -->
                   </li>
                 </ul>
               </div> <!-- suite-section-content -->
@@ -118,8 +118,8 @@
     </div> <!-- navigator-root -->
     <div class="wrapper">
       <div class="main-panel-root">
-        <div panel-name="suite-Suite" class="panel Suite">
-          <div class="suite-Suite-class-passed">
+        <div panel-name="suite-Default_suite" class="panel Default_suite">
+          <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
               <span class="class-name">com.pwc.productcentral.SanityTestCases</span>
@@ -127,147 +127,60 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="WEB_71">
-                  </a> <!-- WEB_71 -->
-                  <span class="method-name">WEB_71</span>
+                  <a name="WEB_50">
+                  </a> <!-- WEB_50 -->
+                  <span class="method-name">WEB_50</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Suite-class-passed -->
-        </div> <!-- panel Suite -->
-        <div panel-name="test-xml-Suite" class="panel">
+          </div> <!-- suite-Default_suite-class-passed -->
+        </div> <!-- panel Default_suite -->
+        <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\erong\git\ProductCentralProject-Automation1\testng.xml</span>
+            <span class="header-content">C:\Users\erong\AppData\Local\Temp\testng-eclipse-460825884\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
 &lt;!DOCTYPE suite SYSTEM &quot;https://testng.org/testng-1.0.dtd&quot;&gt;
-&lt;suite name=&quot;Suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
-  &lt;test thread-count=&quot;5&quot; name=&quot;Test&quot;&gt;
+&lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
+  &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.pwc.productcentral.SanityTestCases&quot;&gt;
-        &lt;methods&gt;
-          &lt;include name=&quot;WEB_1&quot;/&gt;
-          &lt;include name=&quot;WEB_2&quot;/&gt;
-          &lt;include name=&quot;WEB_3&quot;/&gt;
-          &lt;include name=&quot;WEB_4&quot;/&gt;
-          &lt;include name=&quot;WEB_5&quot;/&gt;
-          &lt;include name=&quot;WEB_5_2&quot;/&gt;
-          &lt;include name=&quot;WEB_6&quot;/&gt;
-          &lt;include name=&quot;WEB_7&quot;/&gt;
-          &lt;include name=&quot;WEB_8&quot;/&gt;
-          &lt;include name=&quot;WEB_9&quot;/&gt;
-          &lt;include name=&quot;WEB_10&quot;/&gt;
-          &lt;include name=&quot;WEB_11&quot;/&gt;
-          &lt;include name=&quot;WEB_12&quot;/&gt;
-          &lt;include name=&quot;WEB_13&quot;/&gt;
-          &lt;include name=&quot;WEB_13_1&quot;/&gt;
-          &lt;include name=&quot;WEB_13_2&quot;/&gt;
-          &lt;include name=&quot;WEB_13_3&quot;/&gt;
-          &lt;include name=&quot;WEB_14&quot;/&gt;
-          &lt;include name=&quot;WEB_14_1&quot;/&gt;
-          &lt;include name=&quot;WEB_14_2&quot;/&gt;
-          &lt;include name=&quot;WEB_14_3&quot;/&gt;
-          &lt;include name=&quot;WEB_15&quot;/&gt;
-          &lt;include name=&quot;WEB_16&quot;/&gt;
-          &lt;include name=&quot;WEB_17&quot;/&gt;
-          &lt;include name=&quot;WEB_18&quot;/&gt;
-          &lt;include name=&quot;WEB_19&quot;/&gt;
-          &lt;include name=&quot;WEB_20&quot;/&gt;
-          &lt;include name=&quot;WEB_21&quot;/&gt;
-          &lt;include name=&quot;WEB_22&quot;/&gt;
-          &lt;include name=&quot;WEB_23&quot;/&gt;
-          &lt;include name=&quot;WEB_24&quot;/&gt;
-          &lt;include name=&quot;WEB_25&quot;/&gt;
-          &lt;include name=&quot;WEB_26&quot;/&gt;
-          &lt;include name=&quot;WEB_27&quot;/&gt;
-          &lt;include name=&quot;WEB_28&quot;/&gt;
-          &lt;include name=&quot;WEB_29&quot;/&gt;
-          &lt;include name=&quot;WEB_30&quot;/&gt;
-          &lt;include name=&quot;WEB_31&quot;/&gt;
-          &lt;include name=&quot;WEB_31_1&quot;/&gt;
-          &lt;include name=&quot;WEB_32&quot;/&gt;
-          &lt;include name=&quot;WEB_33&quot;/&gt;
-          &lt;include name=&quot;WEB_34&quot;/&gt;
-          &lt;include name=&quot;WEB_35&quot;/&gt;
-          &lt;include name=&quot;WEB_36&quot;/&gt;
-          &lt;include name=&quot;WEB_37&quot;/&gt;
-          &lt;include name=&quot;WEB_38&quot;/&gt;
-          &lt;include name=&quot;WEB_39&quot;/&gt;
-          &lt;include name=&quot;WEB_40&quot;/&gt;
-          &lt;include name=&quot;WEB_41&quot;/&gt;
-          &lt;include name=&quot;WEB_42&quot;/&gt;
-          &lt;include name=&quot;WEB_43&quot;/&gt;
-          &lt;include name=&quot;WEB_44&quot;/&gt;
-          &lt;include name=&quot;WEB_45&quot;/&gt;
-          &lt;include name=&quot;WEB_46&quot;/&gt;
-          &lt;include name=&quot;WEB_47&quot;/&gt;
-          &lt;include name=&quot;WEB_48&quot;/&gt;
-          &lt;include name=&quot;WEB_49&quot;/&gt;
-          &lt;include name=&quot;WEB_50&quot;/&gt;
-          &lt;include name=&quot;WEB_51&quot;/&gt;
-          &lt;include name=&quot;WEB_52&quot;/&gt;
-          &lt;include name=&quot;WEB_52_1&quot;/&gt;
-          &lt;include name=&quot;WEB_52_2&quot;/&gt;
-          &lt;include name=&quot;WEB_52_3&quot;/&gt;
-          &lt;include name=&quot;WEB_52_4&quot;/&gt;
-          &lt;include name=&quot;WEB_52_5&quot;/&gt;
-          &lt;include name=&quot;WEB_53&quot;/&gt;
-          &lt;include name=&quot;WEB_54&quot;/&gt;
-          &lt;include name=&quot;WEB_55&quot;/&gt;
-          &lt;include name=&quot;WEB_56&quot;/&gt;
-          &lt;include name=&quot;WEB_57&quot;/&gt;
-          &lt;include name=&quot;WEB_58&quot;/&gt;
-          &lt;include name=&quot;WEB_59&quot;/&gt;
-          &lt;include name=&quot;WEB_60&quot;/&gt;
-          &lt;include name=&quot;WEB_61&quot;/&gt;
-          &lt;include name=&quot;WEB_62&quot;/&gt;
-          &lt;include name=&quot;WEB_63&quot;/&gt;
-          &lt;include name=&quot;WEB_64&quot;/&gt;
-          &lt;include name=&quot;WEB_65&quot;/&gt;
-          &lt;include name=&quot;WEB_66&quot;/&gt;
-          &lt;include name=&quot;WEB_67&quot;/&gt;
-          &lt;include name=&quot;WEB_68&quot;/&gt;
-          &lt;include name=&quot;WEB_69&quot;/&gt;
-          &lt;include name=&quot;WEB_70&quot;/&gt;
-          &lt;include name=&quot;WEB_71&quot;/&gt;
-        &lt;/methods&gt;
-      &lt;/class&gt; &lt;!-- com.pwc.productcentral.SanityTestCases --&gt;
+      &lt;class name=&quot;com.pwc.productcentral.SanityTestCases&quot;/&gt;
     &lt;/classes&gt;
-  &lt;/test&gt; &lt;!-- Test --&gt;
-&lt;/suite&gt; &lt;!-- Suite --&gt;
+  &lt;/test&gt; &lt;!-- Default test --&gt;
+&lt;/suite&gt; &lt;!-- Default suite --&gt;
             </pre>
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="testlist-Suite" class="panel">
+        <div panel-name="testlist-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">Tests for Suite</span>
+            <span class="header-content">Tests for Default suite</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">Test (1 class)</span>
+                <span class="test-name">Default test (1 class)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="group-Suite" class="panel">
+        <div panel-name="group-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">Groups for Suite</span>
+            <span class="header-content">Groups for Default suite</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="times-Suite" class="panel">
+        <div panel-name="times-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">Times for Suite</span>
+            <span class="header-content">Times for Default suite</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="times-div">
               <script type="text/javascript">
-suiteTableInitFunctions.push('tableData_Suite');
-function tableData_Suite() {
+suiteTableInitFunctions.push('tableData_Default_suite');
+function tableData_Default_suite() {
 var data = new google.visualization.DataTable();
 data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
@@ -275,27 +188,27 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'WEB_71')
+data.setCell(0, 1, 'WEB_50')
 data.setCell(0, 2, 'com.pwc.productcentral.SanityTestCases')
-data.setCell(0, 3, 34278);
-window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
+data.setCell(0, 3, 19170);
+window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 34 seconds</span>
-              <div id="times-div-Suite">
-              </div> <!-- times-div-Suite -->
+              <span class="suite-total-time">Total running time: 19 seconds</span>
+              <div id="times-div-Default_suite">
+              </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="reporter-Suite" class="panel">
+        <div panel-name="reporter-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">Reporter output for Suite</span>
+            <span class="header-content">Reporter output for Default suite</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="ignored-methods-Suite" class="panel">
+        <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
             <span class="header-content">83 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
@@ -350,8 +263,6 @@ return data;
                 <span class="ignored-method-name">WEB_5_2</span>
                 <br/>
                 <span class="ignored-method-name">WEB_5</span>
-                <br/>
-                <span class="ignored-method-name">WEB_50</span>
                 <br/>
                 <span class="ignored-method-name">WEB_51</span>
                 <br/>
@@ -445,6 +356,8 @@ return data;
                 <br/>
                 <span class="ignored-method-name">WEB_29</span>
                 <br/>
+                <span class="ignored-method-name">WEB_71</span>
+                <br/>
                 <span class="ignored-method-name">WEB_70</span>
                 <br/>
                 <span class="ignored-method-name">WEB_31</span>
@@ -473,7 +386,7 @@ return data;
             </div> <!-- ignored-class-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="chronological-Suite" class="panel">
+        <div panel-name="chronological-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
             <span class="header-content">Methods in chronological order</span>
           </div> <!-- main-panel-header rounded-window-top -->
@@ -486,15 +399,15 @@ return data;
               </div> <!-- configuration-suite before -->
               <div class="configuration-method before">
                 <span class="method-name">initTest</span>
-                <span class="method-start">110 ms</span>
+                <span class="method-start">116 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">WEB_71</span>
-                <span class="method-start">234 ms</span>
+                <span class="method-name">WEB_50</span>
+                <span class="method-start">240 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-suite after">
                 <span class="method-name">closingBrowser</span>
-                <span class="method-start">34528 ms</span>
+                <span class="method-start">19427 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
